--- a/minimax.tex
+++ b/minimax.tex
@@ -446,7 +446,7 @@ For the experiments we performed, we see that the number of questions required t
 %\end{table}
 
 \begin{figure}
-	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different data-sets.}
+	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different data sets.}
 	\label{fig:linearity}
 	\begin{tikzpicture}
 		\pgfplotsset{
@@ -514,7 +514,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 that, on average, halving the number of questions will only reduce the gain in regret by less than half. %\commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
 At the start of the elicitation, the space of uncertainty is so large that the adversary can attain the maximum possible value of regret; multiple answers are needed to constrain her enough for the MMR to start decreasing. When approaching optimality, the pace of MMR reduction decreases.
 
-In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering a real data-set than a IC generated profile. \commentBN{Add more?} \commentOC{Strange $m=14, n=9$; t-shirts; and comparison between ts and m10n30 is not clearly in favor of real data. I’d suppress the discussion about speed of reduction.}
+In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering a real data set than a IC generated profile. \commentBN{Add more?} \commentOC{Strange $m=14, n=9$; t-shirts; and comparison between ts and m10n30 is not clearly in favor of real data. I’d suppress the discussion about speed of reduction.}
 % do less harm than halving the gain in regret, on average.
 
 %\subsection{Value of information comparison}
